Independent Publisher 2: Fix issues with widget block centre alignments.

--- a/independent-publisher-2/css/blocks.css
+++ b/independent-publisher-2/css/blocks.css
@@ -300,15 +300,14 @@ body:not(.has-sidebar) .wp-block-table.alignfull {
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
-/* Categories, Latest Posts & Archives */
+/* General Widget styles */
 
 .wp-block-categories.aligncenter,
 .wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
 .wp-block-latest-posts.aligncenter,
-.wp-block-archives.aligncenter {
+.wp-block-latest-comments.aligncenter {
 	list-style-position: inside;
-	margin-left: 0;
-	margin-right: 0;
 	text-align: center;
 }
 
